# astrid

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml
.cargo/: audit.toml
crates/astrid-audit/: Cargo.toml
crates/astrid-audit/src/: entry.rs  lib.rs  log.rs  log_tests.rs  prelude.rs  storage.rs
crates/astrid-capsule/: .gitignore  Cargo.toml  README.md  build.rs
crates/astrid-capsule-install/: Cargo.toml
crates/astrid-capsule-install/src/: archive.rs  authority.rs  authority_tests.rs  capsule_metadata_mirror.rs  checked_tests.rs  contracts.rs  copy.rs  furniture.rs  github_source.rs  lib.rs  lifecycle.rs  local.rs  manifest_check.rs  meta.rs  paths.rs  principal_introspection.rs  topics.rs  wasm.rs  wit.rs
crates/astrid-capsule-install/tests/: install.rs
crates/astrid-capsule-types/: Cargo.toml
crates/astrid-capsule-types/src/: capsule.rs  fuel_ledger.rs  lib.rs  limits.rs  memory_ledger.rs
crates/astrid-capsule-types/src/manifest/: capabilities.rs  mod.rs  topics.rs
crates/astrid-capsule-types/tests/: env_scope_manifest_isolation.rs
crates/astrid-capsule/src/: access.rs  audit_sink.rs  capsule.rs  context.rs  discovery.rs  dispatcher.rs  dispatcher_device_scope_tests.rs  dispatcher_queues.rs  dispatcher_queues_tests.rs  dispatcher_tests.rs  fuel_ledger.rs  lib.rs  loader.rs  manifest.rs  memory_ledger.rs  principal_class.rs  profile_cache.rs  readiness.rs  registry.rs  registry_tests.rs  schema_catalog.rs  spawn_conn.rs  tool_discovery.rs  topic.rs  toposort.rs  watcher.rs
crates/astrid-capsule/src/dispatcher/: locks.rs  provision.rs
crates/astrid-capsule/src/engine/: mcp.rs  mcp_tests.rs  mod.rs  static_engine.rs
crates/astrid-capsule/src/manifest/: capabilities.rs  mod.rs  topics.rs
crates/astrid-capsule/src/security/: approval.rs  approval_tests.rs  manifest_gate.rs  manifest_gate_tests.rs  mod.rs  test_gates.rs
crates/astrid-capsule/tests/: env_scope_manifest_isolation.rs  windows_named_pipe_handshake.rs
crates/astrid-capsule/wit-staging/: kernel.wit
crates/astrid-compute/: Cargo.toml
crates/astrid-compute/src/: lib.rs  tests.rs
crates/astrid-core/: Cargo.toml  README.md
crates/astrid-core/src/: capability_grammar.rs  capability_registry.rs  daemon_generation.rs  dirs.rs  dirs_tests.rs  kernel_api.rs  lib.rs  local_transport.rs  net.rs  net_tests.rs  platform_fs.rs  principal.rs  product_control.rs  session_token.rs  workspace_security.rs
crates/astrid-core/src/capability_registry/: revision_1.rs  tests.rs  util.rs
crates/astrid-core/src/groups/: io_impl.rs  mod.rs
crates/astrid-core/src/kernel_api/: mod.rs  readiness.rs  tests.rs
crates/astrid-core/src/local_transport/: windows.rs
crates/astrid-core/src/platform_fs/: tests.rs  windows.rs
crates/astrid-core/src/profile/: device.rs  field.rs  io_impl.rs  mod.rs  validation.rs
crates/astrid-core/src/uplink/: mod.rs  types.rs
crates/astrid-core/tests/: windows_named_pipe_security_harness.rs
crates/astrid-crypto/: Cargo.toml
crates/astrid-crypto/src/: identifier.rs  key_storage.rs  keypair.rs  lib.rs  prelude.rs
crates/astrid-daemon/: Cargo.toml  README.md
crates/astrid-daemon/src/: lib.rs  main.rs  signal.rs
crates/astrid-emit/: Cargo.toml
crates/astrid-emit/src/: lib.rs  main.rs
crates/astrid-events/: Cargo.toml
crates/astrid-events/src/: bus.rs  bus_tests.rs  ipc.rs  lib.rs  rate_limiter.rs  route.rs
crates/astrid-events/src/route/: entry.rs  matcher.rs  receiver.rs
crates/astrid-gateway/: Cargo.toml  build.rs
crates/astrid-gateway/examples/: print-openapi.rs
crates/astrid-gateway/src/: auth.rs  bus_admin.rs  bus_kernel.rs  config.rs  error.rs  lib.rs  metrics.rs  openapi.rs  revocations.rs  state.rs  tls.rs
crates/astrid-gateway/src/routes/: agent.rs  audit.rs  auth.rs  caps.rs  capsule_sources.rs  capsules.rs  distribution.rs  env.rs  events.rs  groups.rs  invites.rs  mod.rs  models.rs  observability.rs  principals.rs  quotas.rs  sessions.rs  sessions_bus.rs  sessions_layout.rs  sessions_tests.rs  stream.rs  system.rs
crates/astrid-gateway/tests/: cors.rs  models.rs  router.rs
crates/astrid-ipc-client/: Cargo.toml
crates/astrid-ipc-client/src/: lib.rs  socket_client.rs
crates/astrid-kernel/: Cargo.toml  README.md
crates/astrid-kernel/src/: audit_sink.rs  bus_monitor.rs  capsules_loaded.rs  grant_on_use.rs  grant_on_use_tests.rs  invite.rs  lib.rs  pair_token.rs  runtime_policy_tests.rs  socket.rs
crates/astrid-kernel/src/kernel_router/: caller.rs  capability_catalog_tests.rs  connection_tracker_tests.rs  device_scope.rs  install.rs  mod.rs  rate_limit.rs  response.rs  test_util.rs  tests.rs  visibility.rs
crates/astrid-mcp-bridge/: Cargo.toml
crates/astrid-mcp-bridge/src/: catalog.rs  daemon.rs  debug.rs  error.rs  lib.rs  mcp.rs
crates/astrid-mcp-bridge/tests/: integration.rs
crates/astrid-runtime/: Cargo.toml
crates/astrid-runtime/src/: lib.rs  wasm_task.rs
crates/astrid-types/: Cargo.toml  README.md
crates/astrid-types/src/: ipc.rs  ipc_tests.rs  kernel.rs  lib.rs  topic.rs
crates/astrid-uplink/: Cargo.toml
crates/astrid-uplink/src/: admin_client.rs  kernel_client.rs  lib.rs  socket_client.rs
e2e/fixtures/astrid-capsule-adversarial/: Capsule.toml  Cargo.toml
e2e/fixtures/astrid-capsule-adversarial/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: admin_json.rs  capability_patterns.rs  config_toml.rs  crypto_wire.rs  gateway_request_json.rs  ip_blockset.rs  manifest_toml.rs  ssrf_helpers.rs  topic_patterns.rs
kernel/: Cargo.toml  README.md  run.sh  rust-toolchain.toml
kernel/crates/astrid-kernel/: Cargo.toml
kernel/crates/astrid-kernel/src/: main.rs  memory.rs  serial.rs
kernel/crates/astrid-native-kernel/: Cargo.toml
kernel/crates/astrid-native-kernel/src/: apic.rs  domain.rs  entropy.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  payloads.rs  serial.rs  syscall.rs  tests.rs  trap.rs  vm.rs
kernel/tools/kimage/: Cargo.toml
kernel/tools/kimage/src/: main.rs
kernel/tools/ktest/: Cargo.toml
(+426 files in other folders)
