[workspace]
resolver = "2"
members = [
    "crates/astrid-approval",
    "crates/astrid-audit",
    "crates/astrid-capabilities",
    "crates/astrid-build",
    "crates/astrid-capsule",
    "crates/astrid-capsule-install",
    "crates/astrid-capsule-types",
    "crates/astrid-cli",
    "crates/astrid-config",
    "crates/astrid-daemon",
    "crates/astrid-core",
    "crates/astrid-emit",
    "crates/astrid-crypto",
    "crates/astrid-events",
    "crates/astrid-types",
    "crates/astrid-gateway",
    "crates/astrid-hooks",
    "crates/astrid-integration-tests",
    "crates/astrid-kernel",
    "crates/astrid-mcp",
    "crates/astrid-prelude",
    "crates/astrid-runtime",
    "crates/astrid-storage",
    "crates/astrid-telemetry",
    "crates/astrid-test",
    "crates/astrid-uplink",
    "crates/astrid-vfs",
    "crates/astrid-workspace",
]

[workspace.package]
version = "0.9.4"
edition = "2024"
authors = ["Joshua J. Bouw <dev@joshuajbouw.com>", "Unicity Labs <info@unicity-labs.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-astrid/astrid"
rust-version = "1.95"

[workspace.dependencies]
astrid-approval = { path = "crates/astrid-approval", version = "0.9.4" }
astrid-audit = { path = "crates/astrid-audit", version = "0.9.4" }
astrid-capabilities = { path = "crates/astrid-capabilities", version = "0.9.4" }
astrid-build = { path = "crates/astrid-build", version = "0.9.4" }
astrid-capsule = { path = "crates/astrid-capsule", version = "0.9.4" }
astrid-capsule-install = { path = "crates/astrid-capsule-install", version = "0.9.4" }
astrid-capsule-types = { path = "crates/astrid-capsule-types", version = "0.9.4" }
astrid-config = { path = "crates/astrid-config", version = "0.9.4" }
astrid-daemon = { path = "crates/astrid-daemon", version = "0.9.4" }
astrid-core = { path = "crates/astrid-core", version = "0.9.4" }
astrid-crypto = { path = "crates/astrid-crypto", version = "0.9.4" }
astrid-emit = { path = "crates/astrid-emit", version = "0.9.4" }
astrid-events = { path = "crates/astrid-events", version = "0.9.4" }
astrid-hooks = { path = "crates/astrid-hooks", version = "0.9.4" }
astrid-kernel = { path = "crates/astrid-kernel", version = "0.9.4" }
astrid-mcp = { path = "crates/astrid-mcp", version = "0.9.4" }
astrid-prelude = { path = "crates/astrid-prelude", version = "0.9.4" }
astrid-runtime = { path = "crates/astrid-runtime", version = "0.9.4" }
astrid-storage = { path = "crates/astrid-storage", version = "0.9.4" }
astrid-telemetry = { path = "crates/astrid-telemetry", version = "0.9.4" }
astrid-test = { path = "crates/astrid-test" }
astrid-types = { path = "crates/astrid-types", version = "0.9.4", features = ["clock"] }
astrid-uplink = { path = "crates/astrid-uplink", version = "0.9.4" }
astrid-gateway = { path = "crates/astrid-gateway", version = "0.9.4" }
astrid-vfs = { path = "crates/astrid-vfs", version = "0.9.4" }
astrid-workspace = { path = "crates/astrid-workspace", version = "0.9.4" }
anyhow = "1.0"
arboard = "3"
arc-swap = "1.7"
# Streaming + HTTP-server deps (async-stream, axum, tokio-stream,
# tower, tower-http, utoipa) all back the new `astrid-gateway` crate
# and have no in-workspace substitute. They are scoped to
# `astrid-gateway` (and `astrid-integration-tests` for the gateway
# smoke test); none of the kernel/capsule crates depend on them. See
# crates/astrid-gateway/Cargo.toml for the per-dep rationale.
async-stream = "0.3"
async-trait = "0.1"
# Pinned to axum 0.7 because 0.8 changed the path-param syntax
# (`:id` → `{id}`) and we rely on the matching tower stack
# (`tower-http` 0.6, `utoipa-axum` 0.5). `default-features = false`
# strips the multipart / `original-uri` / `ws` extractors we don't use.
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "tracing", "matched-path"] }
# Wraps the axum router with native TLS via rustls. Used by the
# gateway's optional `[tls]` block; without it the gateway speaks
# plain HTTP and TLS is delegated to an upstream proxy. `tls-rustls`
# is the only TLS backend we ship — no openssl in the workspace.
axum-server = { version = "0.8", features = ["tls-rustls"] }
# Bridges `tokio::sync::broadcast::Receiver` → `futures::Stream` so
# axum's `Sse` responder can consume the kernel event bus directly.
# The `sync` feature is the only thing that does it; not on by default.
tokio-stream = { version = "0.1", features = ["sync"] }
base64 = "0.22"
blake3 = "1.5"
# `default-features = false` strips chrono's `clock` feature, which on
# `wasm32-unknown-unknown` would pull in `wasm-bindgen` + `js-sys` and
# inject `__wbindgen_placeholder__` imports that `wit-component`
# rejects when wrapping a core wasm into a Component Model component.
# Records that need a clock value receive it from `astrid_sdk::time`
# (audited host fn); `DateTime<Utc>` is only used as a serializable
# field shape, never constructed via `Utc::now()` in capsule code.
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "3.1"
crossterm = "0.29"
dashmap = "6.1.0"
dialoguer = "0.11"
directories = "6.0"
ed25519-dalek = { version = "3.0", features = ["rand_core", "zeroize", "serde"] }
flate2 = "1.0"
fs2 = "0.4"
futures = "0.3"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
indicatif = "0.18"
insta = { version = "1.40", features = ["yaml", "json"] }
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
# Enable platform-native backends for every supported OS. Without
# these features the keyring crate falls back to a process-local
# `MockCredential` that "succeeds" without persisting — values vanish
# on process exit and `astrid secret set` silently loses every secret
# it claims to have stored. `apple-native` and `windows-native` are
# additive (the crate picks the right one at compile time); the
# Linux backend stays on the async secret-service binding we had.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "async-secret-service",
    "crypto-rust",
] }
landlock = "0.4"
libc = "0.2"
nix = { version = "0.31", features = ["process", "signal", "user", "fs", "resource"] }
# Async-signal-safe signal handling on a dedicated OS thread. Used by the
# daemon's SIGTERM/SIGINT/SIGHUP watchdog, which owns those signals off the
# tokio runtime so the daemon is killable even when every worker is pinned.
signal-hook = "0.4"
# Metric recording facade + Prometheus exporter. The facade decouples
# recording (`counter!()`, `histogram!()` macros) from export format,
# so we can swap to OTLP later without touching the call sites. Lives
# in the workspace because the eventual plan is for the kernel +
# capsules to record into the same recorder the gateway exports —
# Prometheus integration is intended to go deep into Astrid, not stay
# at the HTTP surface.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
# Pull-based process collector (`process_cpu_seconds_total`, resident
# memory, threads, fds, start time) feeding the same recorder. Supports
# Linux/macOS/Windows/FreeBSD; `collect()` is called per scrape, no
# background thread.
metrics-process = "2.4"
notify = "8"
# `parking_lot::RwLock`/`Mutex` are used in the event-bus per-(capsule,
# topic, principal) routing demux so the synchronous `EventBus::publish`
# path can take a read-lock without forcing an async boundary into every
# publish call site (including the reentrant `SubscriberRegistry::notify`
# path). No poisoning + fewer kernel calls than `std::sync` under
# contention.
parking_lot = "0.12"
rand = "0.10"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
# Self-signed certificate generation for gateway TLS integration
# tests. Test-only (dev-dependency in the gateway integration crate);
# we don't ship cert-mint logic in production code.
rcgen = "0.14"
# Direct dep on rustls (also pulled in transitively via axum-server)
# so the gateway can call `CryptoProvider::install_default()` at boot.
# rustls 0.23 requires that explicit pick when more than one provider
# feature is in the dep tree (which is our situation:
# `reqwest`/`teloxide` pull `rustls/ring` indirectly, axum-server
# pulls `aws-lc-rs`). aws-lc-rs is the FIPS-friendlier option and is
# what we run with in production.
rustls = { version = "0.23", features = ["aws-lc-rs"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# Pinned to the 2.2.x patch range (~). RMCP releases breaking protocol and API
# changes in minor versions. Cargo.lock is committed, but the patch range also
# prevents fresh resolution from silently adopting a future incompatible minor.
# It still admits compatible bug and security fixes.
rmcp = { version = "~2.2.0", features = ["server", "client", "transport-io", "transport-child-process", "elicitation", "macros", "schemars"] }
rustyline = { version = "18", features = ["derive"] }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
subtle = "2"
surrealkv = "0.21"
surrealdb = { version = "3.0.0-beta.3", default-features = false, features = ["kv-surrealkv", "kv-mem"] }
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }
tar = "0.4"
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tempfile = "3"
thiserror = "2.0"
# Base feature set is restricted to the portable subset that compiles on
# every supported target, including `wasm32-unknown-unknown` (browser host
# profile groundwork). `[workspace.dependencies]` features are ADDITIVE with
# each consumer's own `features = [...]`, so any native-only feature listed
# here is force-enabled on every `workspace = true` consumer — even leaf
# semantics crates that only want `sync`/`time`. `net` and `signal` pull in
# `mio`, and `rt-multi-thread` needs OS threads; all three `compile_error!`
# (or fail to link) on wasm. They are declared locally by the crates that
# actually need them (uplink/cli/kernel/gateway/capsule for `net`,
# daemon/kernel for `signal`, and
# daemon/emit/cli/capsule-install/capsule/hooks/kernel/gateway for
# `rt-multi-thread`).
tokio = { version = "1.49", features = ["sync", "macros", "time", "rt", "io-util"] }
tokio-util = "0.7"
toml = "0.9"
# Middleware substrate axum is built on (`Service` trait composition,
# request-id, trace, CORS, body-size limit, response-header injection).
# Dropping `tower-http` means re-implementing each middleware by hand;
# nothing else in the workspace provides it.
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["cors", "trace", "limit", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
# `default-features = false` strips the `js` auto-feature that uuid
# enables on `wasm32-unknown-unknown`, which would pull `wasm-bindgen`.
# The `v4` feature uses `getrandom` under the hood — on host this is
# the OS RNG, on capsule (wasm32-unknown-unknown) it's routed through
# `astrid:sys.random-bytes` via the SDK's custom getrandom backend.
# OpenAPI 3.x spec emission for `/api/openapi.json` + the drift test
# that pins every router path against the spec. Workspace has no
# other OpenAPI generator. `axum_extras` plugs into axum's extractor
# system so `#[utoipa::path]` annotations on handlers carry through.
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1.0", default-features = false, features = ["v4", "v5", "serde", "rng-getrandom"] }
walkdir = "2.5"
wasm-encoder = "0.253"
wasmparser = "0.253"
wit-component = "0.253"
wit-parser = "0.253"
wasmtime = { version = "46", features = ["component-model", "cranelift"] }
wasmtime-wasi = "46"
unicode-width = "0.2"
which = "8"
zeroize = { version = "1.8", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
arithmetic_side_effects = "deny"
