[package]
name = "astrid-audit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Chain-linked cryptographic audit logging for Astrid"

[dependencies]
astrid-capabilities = { workspace = true }
astrid-core = { workspace = true }
astrid-crypto = { workspace = true }
astrid-storage = { workspace = true, features = ["kv"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# `block_on`'s production path uses `tokio::task::block_in_place`, which is
# gated behind `rt-multi-thread` — native-only (needs OS threads, absent on
# wasm). The wasm build cfg-gates that branch out (see src/storage.rs), so the
# feature is only needed off-wasm.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
