[package]
name = "astrid-audit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Chain-linked cryptographic audit logging for Astrid"

[dependencies]
astrid-capabilities = { workspace = true }
astrid-core = { workspace = true }
astrid-crypto = { workspace = true }
astrid-storage = { workspace = true, features = ["kv"] }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# `sync` only: the storage/log surface is genuinely async now (the old
# sync-over-async `block_on` is gone), so all that remains is the
# `tokio::sync::RwLock` that guards the chain heads across the persist await.
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `rt-multi-thread` drives the `#[tokio::test(flavor = "multi_thread")]`
# concurrency regressions; `macros` for `#[tokio::test]`.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
