[package]
name = "astrid-capsule"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core runtime management for User-Space Capsules in Astrid OS"
build = "build.rs"

[dependencies]
astrid-approval = { workspace = true }
astrid-capabilities = { workspace = true }
astrid-core = { workspace = true }
astrid-crypto = { workspace = true }
astrid-events = { workspace = true }
astrid-mcp = { workspace = true }
astrid-storage = { workspace = true, features = ["keychain"] }
astrid-vfs = { workspace = true }
astrid-workspace = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bytes = "1"
dashmap = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }
notify = "7"
parking_lot = { workspace = true }
rand = { workspace = true }
# `astrid:http@1.1.0` `auto-decompress` toggles gzip/brotli/deflate/zstd per
# request; those builder methods are feature-gated in reqwest. Enabled here so
# the host can honour (and disable) decompression. The workspace base dep stays
# minimal; Cargo unions these features in for the capsule crate's build.
reqwest = { workspace = true, features = ["gzip", "brotli", "deflate", "zstd"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
socket2 = "0.6"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasmparser = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
astrid-crypto = { workspace = true }
astrid-mcp = { workspace = true, features = ["test-support"] }
# Test-only: build a synthetic `reqwest::Response` (via `reqwest::Response::from`)
# for hermetic stream-quota tests, with no network.
http = "1"
wasm-encoder = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
