[package]
name = "astrid-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types and traits for Astrid secure agent runtime"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
# astrid-core exposes toml error types in its public error enums. Keep this
# crate on the current public dependency until a breaking release can change
# that API deliberately.
toml = "0.8.23"
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

# uuid (`rng-getrandom`) and rand 0.10 pull getrandom 0.4, which refuses to
# build for wasm32-unknown-unknown unless its `wasm_js` backend is enabled.
# wasm-only; native builds are unaffected. Requires the build to be run with
# RUSTFLAGS='--cfg getrandom_backend="wasm_js"' (see scripts/check-wasm-portability.sh).
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[lints]
workspace = true
