[package]
name = "astrid-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Astrid daemon - the background kernel process for the Astrid secure agent runtime"

[lib]
path = "src/lib.rs"

[[bin]]
name = "astrid-daemon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
astrid-capsule = { workspace = true }
astrid-capsule-install = { workspace = true }
astrid-config = { workspace = true }
astrid-core = { workspace = true }
astrid-gateway = { workspace = true }
astrid-kernel = { workspace = true }
astrid-telemetry = { workspace = true, features = ["config"] }
clap = { workspace = true }
colored = { workspace = true }
# `signal` (SIGTERM/SIGHUP/ctrl-c shutdown), `rt-multi-thread` (the
# `Builder::new_multi_thread()` runtime): native-only, no longer in the
# workspace tokio base.
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# `nix` is a Unix-only crate. It is used solely for the startup `setsid` that
# detaches the daemon into its own session (so a spawner teardown / SIGHUP can't
# kill it before its graceful shutdown), which is itself `#[cfg(unix)]`-gated —
# so gate the dependency the same way to keep the crate portable.
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[lints]
workspace = true
