[package]
name = "astrid-emit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "astrid-emit - agent-agnostic stdio->bus pipe for the Astrid secure agent runtime"

[lib]
path = "src/lib.rs"

[[bin]]
name = "astrid-emit"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
astrid-core = { workspace = true }
astrid-types = { workspace = true }
astrid-uplink = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
# `rt-multi-thread`: `#[tokio::main]`; native-only, not in the tokio base.
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
