[package]
name = "astrid-events"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Event bus for Astrid secure agent runtime"

[dependencies]
astrid-runtime = { workspace = true }
web-time = "1.1.0"
astrid-types = { workspace = true }
astrid-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
dashmap = { workspace = true }
# Metric recording facade. The bus emits publish-throughput and
# per-subscriber lag counters into whatever process-wide recorder the
# daemon installs (the gateway's Prometheus recorder today); no exporter
# dependency here — recording is decoupled from export.
metrics = { workspace = true }
# Synchronous routing demux uses `parking_lot::RwLock + Mutex` so
# `EventBus::publish` stays sync (the reentrant `SubscriberRegistry`
# notify path would deadlock if every publish became async).
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.49", features = ["sync", "rt"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
# Thread-local debugging recorder for asserting metric emission in unit
# tests without installing a global recorder (`with_local_recorder`).
metrics-util = "0.20"

[lints]
workspace = true
